remove file collection
